--- a/src/app/shared/components/doc-viewer/doc-viewer.component.html
+++ b/src/app/shared/components/doc-viewer/doc-viewer.component.html
@@ -1,6 +1,6 @@
 <div id="document-viewer" style="display: flex;align-items: center;justify-content: center;" >
-  <object *ngIf="contentType === 'document'" [data]="docPath" [type]="mimeType" style="margin: 25px;min-height:100vh;width:100%">
+  <object *ngIf="contentType === 'document'" [data]="docPath | safeUrl" [type]="mimeType" style="margin: 25px;min-height:100vh;width:100%">
     <!--    <embed [src]="docPath" />-->
   </object>
-  <img *ngIf="contentType === 'image'" id="view-doc-image" alt="Image document" [src]="docPath" style="max-width:100%"/>
+  <img *ngIf="contentType === 'image'" id="view-doc-image" alt="Image document" [src]="docPath | safeUrl" style="max-width:100%"/>
 </div>
