VQ-295 Reassign tickets unit test

--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -40,7 +40,7 @@
 
 <div  class="d-flex my-4 mx-4">
   <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>
-  <button class="btn btn-primary" (click)="processReassignTask()">Multiple Reassign</button>
+  <button class="btn btn-primary" (click)="processReassignTask()" id="btn-reassign-task">Multiple Reassign</button>
 </div>
 <div class="my-4 mx-4">
   <div class="card">
