--- a/src/app/features/gis/components/setups/components/product/product-setup-wizard/product-setup-wizard.component.html
+++ b/src/app/features/gis/components/setups/components/product/product-setup-wizard/product-setup-wizard.component.html
@@ -17,7 +17,7 @@
                     <p id="tabbed" class="activate">Setup Wizard </p>
                   </div>
                   <div class="col-xl-8">
-                    <p id="tabbed" routerLink="/home/gis/product-setup">Product Groups and Products</p>
+                    <p id="tabbed" routerLink="/home/gis/setup/product/product-definition">Product Groups and Products</p>
                   </div> 
                 </div>
                 <div id="info" class="p-2 mt-2">
