VQ-175: Specific Auth component Unit test and Documentation

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -63,7 +63,7 @@
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header border-0">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-ds-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -74,7 +74,7 @@
           </p>
         </div>
         <div class="modal-footer border-0">
-          <button type="button" class="bttn can" data-dismiss="modal">Cancel</button>
+          <button type="button" class="bttn can" data-ds-dismiss="modal">Cancel</button>
           <button id="reset-password" type="button" class="bttn res" (click)="resetPassword()">Reset Password</button>
         </div>
       </div>
