--- a/src/app/shared/components/stepper/horizontal-stepper/horizontal-stepper.component.css
+++ b/src/app/shared/components/stepper/horizontal-stepper/horizontal-stepper.component.css
@@ -2,11 +2,14 @@
 .rt-container {
   display: flex;
   justify-content: center;
-  border: 1px solid #b2b4b7;
+  /* border: 1px solid #b2b4b7; */
   padding: 2.4rem 0.1rem;
-  border-radius: 3px;
+  /* border-radius: 3px; */
   margin-top: 1.5rem;
-  background-color: white;
+  margin-left: 200px;
+  margin-right: 200px;
+
+  background-color:transparent;
 }
 
 .step {
@@ -33,7 +36,7 @@
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
   text-align: center;
-  box-shadow: 0 0 0 3px #fff;
+  /* box-shadow: 0 0 0 3px #fff; */
   margin-bottom: 0.5em;
 }
 
@@ -52,9 +55,10 @@
 
 /* Stepper Titles */
 .title {
-  font-weight: bold;
+  font-weight: 400;
   font-size: 0.8rem;
   margin-top: 0.5em; /* Add margin-top for the title */
+  
 }
 
 .link {
@@ -160,9 +164,9 @@
 
 
 .step-active  {
-  background-color: #0824814b;
-  color: #fff;
-  border: 0;
+  background-color:transparent;
+  color: var(--primary-color);
+  border: 1px solid #00529B;
 }
 
 .done > .circle {
@@ -171,7 +175,7 @@
 }
 
 .done > .title {
-  color: black;
+  color:var(--primary-color);
 }
 
 .done {
@@ -181,5 +185,10 @@
 
 .step-link {
   cursor: pointer;
-  color: black;
-}
+  color: #00529B;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;}
