--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -511,12 +511,12 @@ color: #00529B;
 
 .card {
   background-color: white;
-  border-radius: 10px;
+  border-radius: 0 px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  margin: 20px;
-  padding: 20px;
+  /* margin: 20px;
+  padding: 20px; */
 }
 
 .card-header {
