--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -8,7 +8,7 @@
             <!-- ROW 1 -->
             <div class="row mb-4">
                 <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Name*</label>
+                    <label for="minmax-buttons" class="required" id="quote-label">Name</label>
                     <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">                            
                 </div>
                 <div class="col-4 ">
@@ -37,16 +37,16 @@
                 </div>
                 <div class="col-4">
                     <label for="minmax-buttons" id="quote-label">Product</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="" [(ngModel)]="selectedProduct">
+                    <select class="form-select form-control-sm mb-1 ms-n4" id="product-dropdown" formControlName="" (change)="onProductSelected($event)">
                         <option value=""></option>
                         <option *ngFor="let product of productList" [value]="product.shortDescription">{{ product.description }}</option>
-                    </select>     
+                    </select>   
                 </div>
                 <div class="col-4">
                     <label for="minmax-buttons" id="quote-label">Use of property</label>
                     <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                        <option value=""></option>
-                        <option *ngFor="" [ngValue]=""></option>
+                        <option ></option>
+                        <option ></option>
                     </select>    
                 </div>
             </div>
@@ -54,20 +54,20 @@
              <div class="row">
                 <div class="col-4">
                     <label for="minmax-buttons" id="quote-label">Binder</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
+                    <select class="form-select form-control-sm mb-1 ms-n4" id="binder-dropdown" formControlName="">
                         <option value=""></option>
-                        <option *ngFor="" [ngValue]=""></option>
-                    </select> 
+                        <option *ngFor="let binder of selectedBinderList" [value]="binder.code">{{ binder.binder_short_description }}</option>
+                    </select>                
                 </div>
                 <div class="col-4">
                     <label for="minmax-buttons" id="quote-label">Cover Period</label>
                     <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
                 </div>
                 <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Currency*</label>
+                    <label for="minmax-buttons" class="required" id="quote-label">Currency</label>
                     <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
                         <option value=""></option>
-                        <option *ngFor="" [ngValue]=""></option>
+                        <option></option>
                     </select>                 
                 </div>
             </div>
